syntax = "proto3";

package auth;

option go_package = "/pubauth";

import "google/protobuf/empty.proto";

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty);
  rpc UpdatePassword (UpdatePasswordRequest) returns (google.protobuf.Empty);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string access_token = 1;
  string refresh_token = 2;
}

message UpdatePasswordRequest {
  string access_token = 1;
  string new_password = 2;
}